Add UI methods to render books to the DOM

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 -->
   </section>
 
-  <form onsubmit="return false">
+  <form id="addBookForm">
     <input type="text" name="bookTitle" id="bookTitle">
     <input type="text" name="bookAuthor" id="bookAuthor">
     <button id="addBook">Add</button>
