Style list of books section

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Awesome Books</title>
 </head>
 
 <body>
-  <h1>Awesome books</h1>
-  <hr/>
-  <section id="booksList">
+  <h1 class="title">All awesome books</h1>
+  <section class="books" id="booksList">
 <!--
   Books go here
 -->
   </section>
-
+  <hr class="divider"/>
   <form id="addBookForm">
     <input type="text" name="bookTitle" id="bookTitle">
     <input type="text" name="bookAuthor" id="bookAuthor">
