Style new book form

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 -->
   </section>
   <hr class="divider"/>
-  <form id="addBookForm">
-    <input type="text" name="bookTitle" id="bookTitle">
-    <input type="text" name="bookAuthor" id="bookAuthor">
-    <button id="addBook">Add</button>
+  <form class="form" id="addBookForm">
+    <h2 class="title">Add a new book</h2>
+    <div class="formContent">
+      <input placeholder="Title" type="text" name="bookTitle" id="bookTitle">
+      <input placeholder="Author" type="text" name="bookAuthor" id="bookAuthor">
+      <button class="button" id="addBook">Add</button>
+    </div>
   </form>
   <script src="./assets/js/index.js"></script>
 </body>
