--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <form class="form" id="addBookForm">
     <h2 class="title">Add a new book</h2>
     <div class="formContent">
-      <input placeholder="Title" type="text" name="bookTitle" id="bookTitle">
-      <input placeholder="Author" type="text" name="bookAuthor" id="bookAuthor">
+      <input required placeholder="Title" type="text" name="bookTitle" id="bookTitle">
+      <input required placeholder="Author" type="text" name="bookAuthor" id="bookAuthor">
       <button class="button" id="addBook">Add</button>
     </div>
   </form>
