Style selected tab

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li class="title logo">Awesome Books</li>
       <li>
         <ul>
-          <li data-tab="home" class="navButton">List</li>
+          <li data-tab="home" class="navButton selected">List</li>
           <li data-tab="addBook" class="navButton">Add new</li>
           <li data-tab="contact" class="navButton">Contact</li>
         </ul>
