Style contact page

--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
     </form>
   </section>
   <section class="hidden page" id="contact">
-    <h1>Contact Information</h1>
-    <p>Do you have any questions or just want to say "Hi"?</p>
-    <p>Reach out and let's have a vitual coffee!</p>
-    <ul>
-      <li>Our e-mail: mail@mail.com</li>
-      <li>Our phone number: +01 42667489</li>
-      <li>Our address: Sesame st. 21, 420 Cleaveland, UZ</li>
-    </ul>
+    <h1 class="title">Contact Information</h1>
+    <article class="content">
+      <p>Do you have any questions or just want to say "Hi"?</p>
+      <p>Reach out and let's have a vitual coffee! 👋</p>
+      <ul>
+        <li>Our e-mail: mail@mail.com</li>
+        <li>Our phone number: +01 42667489</li>
+        <li>Our address: Sesame st. 21, Cleaveland, UZ</li>
+      </ul>
+    </article>
   </section> 
   <hr class="divider"/>
   <footer class="footer">
