Add time under nav

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </ul>
       </li>
     </ul>
+    <div class="date" id="date">
+    </div>
   </nav>
   <section class="page" id="home">
     <h1 class="title">All awesome books</h1>
